# blackhole

./: CMakeLists.txt  README.md  haffman.cpp  haffman.h  huffman.cpp  main.cpp  terminal.h
assets/: testdata  testdata.txt
src/: archive.h  bit-stream.h  huffman.cpp  huffman.h  io.h  main.cpp
tests/: bitstream_tests.cpp  cannonical_tests.cpp  huffman_tests.cpp  huffman_tree_tests.cpp  io_tests.cpp
